Remove McdAccount::connection-status-changed signal

Nothing listens to it.

Reviewed-by: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>
Bug: https://bugs.freedesktop.org/show_bug.cgi?id=39334